--- a/todolist-app/package.json
+++ b/todolist-app/package.json
@@ -14,12 +14,13 @@
     "@types/styled-components": "^5.1.34",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "styled-components": "^6.1.19"
+    "styled-components": "^6.1.19",
+    "@testing-library/react": "^16.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@testing-library/jest-dom": "^6.8.0",
-    "@testing-library/react": "^16.3.0",
+    
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
