--- a/todolist-app/package.json
+++ b/todolist-app/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@testing-library/react": "^16.3.0",
     "@types/styled-components": "^5.1.34",
+    "axios": "^1.12.1",
     "clsx": "^2.1.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
